# quipucords

./: .containerignore  .coveragerc  .dockerignore  .env.example  .flakeheaven-baseline  .git-blame-ignore-revs  .gitignore  .hermeto  .landscape.yml  .pyup.yml  .travis.yml  AI_POLICY.md  AUTHORS.md  AUTHORS.rst  CHANGES.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  Containerfile  Dockerfile  Dockerfile.scan-target  Jenkinsfile  Jenkinsfile.release  Makefile  Pipfile  PostgreSQL_License.txt  README.md  README.rst  Vagrantfile  codecov.yml  conftest.py  dev-locked-requirements.txt  dev-requirements.in  dev-requirements.txt  docker-compose.yml  foo.json  hermeto.env  locked-requirements.txt  pyproject.toml  pytest.ini  (+15 more)
.claude/: settings.json
.github/: CODEOWNERS  issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-arm64.yml  build.yml  forbid-fixup-commits.yaml  test.yml
.tekton/: discovery-server-pull-request.yaml  discovery-server-push.yaml  downstream-build-arguments.conf
.tekton/task/: generate-version-labels.yaml
client/: .editorconfig  .env.development  .env.production  .env.staging  .env.test  .eslintrc  .gitignore  README.rst  config-overrides.js  package-lock.json  package.json
client/public/: index.html  manifest.json
client/scripts/: api.sh  postinstall.sh  swagger.js
client/src/: App.js  app.js  index.css  index.js  navItems.js  routes.js  store.js
dependencies/: rpms.in.yaml  rpms.lock.yaml  ubi.repo
deploy/: check_related_services_liveness.sh  docker_run.sh  entrypoint_celery_worker.sh  entrypoint_web.sh  gunicorn.conf.py  gunicorn_conf.py  legacy_gunicorn_conf.py  nginx.conf  rejected_common_passwords.txt  run.sh  server_run.sh  setup_user.py  supervisord.conf
deploy/ssl/: server.crt  server.csr  server.key
docs/: Makefile  fact-dictionary.md  installation.md  products-prod.json  public_cloud.md  sudo_cmd_list.txt  sudoers_required_cmds.txt  swagger.yml
docs/source/: advanced_topics.rst  authentication.rst  beta.rst  cli_configure.rst  cli_login.rst  cli_logout.rst  cli_server_interaction.rst  command_line_reference.rst  commands.rst  con_about_qpc.rst  concepts.rst  conf.py  configure.rst  deduplication.rst  encryption.rst  fingerprinting.rst  fingerprints.rst  getting_started.rst  index.rst  insights_upload_configuration.rst  install.rst  install_cli.rst  install_container_image.rst  install_scripted.rst  install_server_centos7.rst  install_server_fedora.rst  install_server_fedora26_fedora27.rst  install_server_rhel6_centos6.rst  install_server_rhel7.rst  install_server_rhel7_centos7.rst  install_steps.rst  man.rst  quick_start.rst  requirements.rst  scanning.rst  troubleshooting.rst  using_qpc.rst  working_with_insights.rst  working_with_reports.rst  working_with_scan_jobs.rst  (+2 more)
elasticsearch/: docker-compose.yml
install/: PostgreSQL_License.txt  install.sh  qpc_playbook.yml
lockfiles/: artifacts.lock.yaml  requirements-binary.txt  requirements-build.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo
qpc/: __init__.py  cli.py  clicommand.py  messages.py  request.py  tests.py  tests_cli.py  tests_qpc_utils.py  tests_utilities.py  translation.py  utils.py
qpc/auth/: __init__.py  add.py  clear.py  commands.py  edit.py  list.py  show.py  tests_add.py  tests_clear.py  tests_edit.py  tests_list.py  tests_show.py  utils.py
qpc/cred/: __init__.py  add.py  clear.py  commands.py  edit.py  list.py  show.py  tests_add.py  tests_clear.py  tests_cred_add.py  tests_cred_clear.py  tests_cred_edit.py  tests_cred_list.py  tests_cred_show.py  tests_edit.py  tests_list.py  tests_show.py  utils.py
qpc/credential/: __init__.py  add.py  clear.py  commands.py  edit.py  list.py  show.py  tests_add.py  tests_clear.py  tests_edit.py  tests_list.py  tests_show.py
qpc/insights/: __init__.py  commands.py  tests_insights_install_check.py  tests_insights_upload.py  upload.py  utils.py
qpc/network/: __init__.py  add.py  clear.py  commands.py  edit.py  list.py  show.py  tests_add.py  tests_clear.py  tests_edit.py  tests_list.py  tests_show.py  utils.py
qpc/report/: __init__.py  commands.py  deployments.py  deprecated_detail.py  deprecated_summary.py  detail.py  details.py  job.py  merge.py  merge_status.py  summary.py  tests_deprecated_report_detail.py  tests_deprecated_report_summary.py  tests_report_deployments.py  tests_report_detail.py  tests_report_details.py  tests_report_job.py  tests_report_merge.py  tests_report_merge_status.py  tests_report_summary.py
qpc/scan/: __init__.py  add.py  cancel.py  clear.py  commands.py  edit.py  job.py  list.py  new_show.py  pause.py  restart.py  show.py  start.py  status.py  tests_cancel.py  tests_list.py  tests_pause.py  tests_restart.py  tests_scan_add.py  tests_scan_cancel.py  tests_scan_clear.py  tests_scan_edit.py  tests_scan_job.py  tests_scan_list.py  tests_scan_pause.py  tests_scan_restart.py  tests_scan_show.py  tests_scan_start.py  tests_scan_status.py  tests_show.py  tests_start.py  tests_utils.py  utils.py
qpc/server/: __init__.py  commands.py  configure_host.py  login_host.py  logout_host.py  status.py  tests_configure_host.py  tests_login.py  tests_login_host.py  tests_logout_host.py  tests_status.py
qpc/source/: __init__.py  add.py  clear.py  commands.py  edit.py  list.py  show.py  tests_add.py  tests_clear.py  tests_edit.py  tests_list.py  tests_show.py  tests_source_add.py  tests_source_clear.py  tests_source_edit.py  tests_source_list.py  tests_source_show.py  utils.py
quipucords/: conftest.py  constants.py  local_gunicorn.conf.py  log_messages.py  manage.py
quipucords/api/: __init__.py  admin.py  apps.py  encrypted_charfield.py  encrypted_fields.py  es_receivers.py  exceptions.py  fact_collection_receiver.py  (+37 more)
rel-eng/: releasers.conf
scripts/: build_rpm_lockfile.py  dnf  generate_fact_dictionary.py  generate_sudo_list.py  lock-build-requirements.sh  lock_binary_requirements.py  lock_crates.py  prepare-rust-deps.py  prepare_rust_deps.py  rusted.py  test_generate_sudo_list.py  update_product_list.py
test_util/: crash.py
(+1124 files in other folders)
