[tool.poetry]
name = "quipucords"
version = "1.9.1"
description = "Tool for discovery, inspection, collection, deduplication, and reporting on an IT environment."
authors = ["Quipucords Dev Team <quipucords@redhat.com>"]
readme = "README.md"
license = "GPLv3"

[project]
requires-python = ">=3.11,<3.13"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ansible = ">=10,<11"  # important note: ansible>=10 (ansible-core>=2.17) dropped support for python 2.7 on remote hosts
django = "^4.2.14"
django-filter = ">=22.1"
djangorestframework = "^3.14"
jmespath = "^1.0.1"
paramiko = "^3.0.0"
pexpect = "^4.8.0"
pyvmomi = "^8.0.2"
pyyaml = "^6.0.1"
requests = "^2.32.2"
whitenoise = "^6.3.0"
psycopg2 = "<3"
ansible-runner = "^2.4.0"
gunicorn = "^22.0.0"
openshift = ">=0.13"
pydantic = "^1.10.4"
django-environ = "^0.10.0"
celery = {extras = ["redis"], version = "^5.3.0"}
more-itertools = "^9.1.0"
django-cors-headers = "^4.3.1"
django-axes = "^6.3.0"

# Temporary hack to handle: https://pagure.io/python-daemon/issue/92
# quipucords does not directly use python-daemon, but our requirement
# ansible-runner does, and ansible-runner simply declares '*' version.
# Pinning python-daemon<3.0.0 works around this downstream build error:
#   ModuleNotFoundError: No module named 'setuptools.extern'
# This has been fixed in python-daemon source but not yet released.
# We should remove this pinned version as soon as >3.0.1 is available.
python-daemon = "<3.0.0"

[tool.poetry.group.dev.dependencies]
pip = "23.3.1"  # see https://github.com/quipucords/quipucords/pull/2559
pytest = "^7.2.1"
coverage = "^7.0.5"
factory-boy = "^3.2.1"
pytest-cov = "<4"
pytest-django = "^4.5.2"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.10.0"
pytest-recording = "^0.12.1"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.1.0"
requests-mock = "^1.10.0"
httpretty = "^1.1.4"
pip-tools = "^7.3.0"
watchdog = {extras = ["watchmedo"], version = "^2.2.1"}
pybuild-deps = "^0.2.0"
pytest-profiling = "^1.7.0"
ipython = "^8.10.0"
django-extensions = "^3.2.1"
notebook = "^6.5.3"
ruff = "^0"
celery = {extras = ["pytest"], version = "^5.3.0"}
debugpy = "1.6.7"

[tool.pytest.ini_options]
pythonpath = "quipucords/"
addopts = [
    "--ds=quipucords.settings",
    "--block-network",
    "--allowed-hosts=127.0.0.1,::1,.*\\.sock",
]

[tool.ruff]
lint.select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "N",   # pep8-naming
]
lint.ignore = [
    "D107",
    "D203", 
    "D403",
]
src = ["quipucords"]
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "compat",
    "constants",
    "fingerprinter",
    "log_messages",
    "quipucords",
    "scanner",
    "tests",
    "utils",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**test**" = [
    "PLC1901", 
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "S107",
    "S311",
]
"quipucords/api/migrations/*.py" = ["D100", "D101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"
