[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quipucords"]

[project]
name = "quipucords"
version = "2.4.3"
description = "Tool for discovery, inspection, collection, deduplication, and reporting on an IT environment."
requires-python = "<3.14,>=3.12"
authors = [
    {name = "Quipucords Dev Team", email = "quipucords@redhat.com"},
]
# license should preferably follow identifiers listed at the SPDX Open Source License Registry.
# https://spdx.org/licenses/
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
dependencies = [
    "ansible-runner<3.0.0,>=2.4.0",
    "ansible<11,>=10",
    "celery[redis]<6,>=5.3.0",
    "django-axes<7.0.0,>=6.3.0",
    "django-cors-headers<5.0.0,>=4.3.1",
    "django-environ<1.0.0,>=0.10.0",
    "django-filter>=22.1",
    "django<5.3.0,>=5.2.3",
    "djangorestframework<4.0,>=3.14",
    "drf-spectacular[sidecar]<1.0.0,>=0.28.0",
    "fqdn<2.0.0,>=1.5.1",
    "gunicorn<24.0.0,>=23.0.0",
    "jmespath<2.0.0,>=1.0.1",
    "more-itertools<10.0.0,>=9.1.0",
    "openshift>=0.13",
    "paramiko<4.0.0,>=3.0.0",
    "pexpect<5.0.0,>=4.8.0",
    "psycopg[c]<4.0.0,>=3.2.3",
    "pydantic<2.0.0,>=1.10.4",
    "rpds-py==0.24.0", # pinning because konflux/hermeto/cargo is failing on newer 0.25.1 version
    "pyyaml<7.0.0,>=6.0.1",
    "requests<3.0.0,>=2.32.2",
    "whitenoise<7.0.0,>=6.3.0",
    "django-json-agg>=0.0.1",
    "pyvmomi",
    "urllib3>=2.6.0", # pinning to force a newer version; TODO drop this after kubernetes >34.1.0 releases
]

[dependency-groups]
dev = [
    "coverage<8.0.0,>=7.0.5",
    "django-extensions<4.0.0,>=3.2.1",
    "factory-boy<4.0.0,>=3.2.1",
    "httpretty<2.0.0,>=1.1.4",
    "ipython<9.0.0,>=8.10.0",
    "notebook<7.0.0,>=6.5.3",
    "pybuild-deps<1.0.0,>=0.5.0",
    "pytest-cov<4",
    "pytest-django<5.0.0,>=4.5.2",
    "pytest-lazy-fixture<1.0.0,>=0.6.3",
    "pytest-mock<4.0.0,>=3.10.0",
    "pytest-profiling<2.0.0,>=1.7.0",
    "pytest-recording<1.0.0,>=0.12.1",
    "pytest-timeout<3.0.0,>=2.1.0",
    "pytest-xdist<4.0.0,>=3.1.0",
    "pytest<8.0.0,>=7.2.1",
    "requests-mock<2.0.0,>=1.10.0",
    "ruff<1,>=0",
    "watchdog[watchmedo]<3.0.0,>=2.2.1",
    # temporarily lock pip behind 25.1 (pybuild-deps will require a change)
    "pip<25.1",
]


[tool.pytest.ini_options]
pythonpath = "quipucords/"
addopts = [
    "--ds=quipucords.settings",
    "--block-network",
    "--allowed-hosts=127.0.0.1,::1,.*\\.sock",
]

[tool.ruff]
lint.select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "N",   # pep8-naming
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
lint.ignore = [
    "D107",
    "D203", 
    "D403",
    "PLC0415", # import-outside-top-level
]
src = ["quipucords"]
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "compat",
    "constants",
    "fingerprinter",
    "log_messages",
    "quipucords",
    "scanner",
    "tests",
    "utils",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**test**" = [
    "PLC1901", 
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "S107",
    "S311",
]
"quipucords/api/migrations/*.py" = ["D100", "D101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.uv]
package = true
required-version = ">=0.7"
# Use environment markers to limit library selection to only cpython and linux/macos
# https://docs.python.org/3/library/sys.html#sys.platform
environments = [
    "implementation_name == 'cpython' and (sys_platform == 'linux' or sys_platform == 'darwin')",
]

[tool.uv.sources]
pyvmomi = { git = "https://github.com/vmware/pyvmomi.git", tag = "v9.0.0.0" }
